updating project name after deployment from template repository

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "hmpps-template-typescript",
+  "name": "hmpps-nomis-sync-dashboard",
   "version": "0.0.1",
-  "description": "HMPPS Typescript Template",
-  "repository": "git@github.com:ministryofjustice/hmpps-template-typescript.git",
+  "description": "Hmpps Nomis Sync Dashboard",
+  "repository": "git@github.com:ministryofjustice/hmpps-nomis-sync-dashboard.git",
   "license": "MIT",
   "scripts": {
     "prepare": "husky install",
