--- a/helm_deploy/hmpps-nomis-sync-dashboard/values.yaml
+++ b/helm_deploy/hmpps-nomis-sync-dashboard/values.yaml
@@ -41,9 +41,9 @@ generic-service:
       SYSTEM_CLIENT_ID: "SYSTEM_CLIENT_ID"
       SYSTEM_CLIENT_SECRET: "SYSTEM_CLIENT_SECRET"
       SESSION_SECRET: "SESSION_SECRET"
-    elasticache-redis:
-      REDIS_HOST: "primary_endpoint_address"
-      REDIS_AUTH_TOKEN: "auth_token"
+    hmpps-redis:
+      REDIS_HOST: "REDIS_HOST"
+      REDIS_PASSWORD: "REDIS_PASSWORD"
 
   allowlist:
     office: "217.33.148.210/32"
