SDI-119 fixed lint and all env helm

--- a/helm_deploy/hmpps-nomis-sync-dashboard/values.yaml
+++ b/helm_deploy/hmpps-nomis-sync-dashboard/values.yaml
@@ -13,6 +13,7 @@ generic-service:
     enabled: true
     host: app-hostname.local    # override per environment
     tlsSecretName: nomis-sync-dashboard-cert
+    contextColour: green
 
   livenessProbe:
     httpGet:
