SDI 119 Placeholder page for visit migration dashboard (#5)
* sdi-119 updated redis config

* sdi-119 preprod config

* sdi-119 wip

* sdi-119 wip

* SDI-119 Test for tile and home page

* SDI-119 Add cypress test and role based tile

* SDI-119 fixed lint and all env helm

* SDI-119 Correct log statement

Co-authored-by: lbennett-moj <lucy.bennett@digital.justice.gov.uk>

--- a/helm_deploy/values-dev.yaml
+++ b/helm_deploy/values-dev.yaml
@@ -6,12 +6,12 @@ generic-service:
 
   ingress:
     host: nomis-sync-dashboard-dev.hmpps.service.justice.gov.uk
-    contextColour: green
 
   env:
     INGRESS_URL: "https://nomis-sync-dashboard-dev.hmpps.service.justice.gov.uk"
     HMPPS_AUTH_URL: "https://sign-in-dev.hmpps.service.justice.gov.uk/auth"
     TOKEN_VERIFICATION_API_URL: "https://token-verification-api-dev.prison.service.justice.gov.uk"
+    NOMIS_MIGRATION_API_URL: "https://prisoner-nomis-migration-dev.hmpps.service.justice.gov.uk"
 
 generic-prometheus-alerts:
   alertSeverity: digital-prison-service-dev
