--- a/feature.env
+++ b/feature.env
@@ -2,6 +2,7 @@ PORT=3007
 HMPPS_AUTH_URL=http://localhost:9091/auth
 TOKEN_VERIFICATION_API_URL=http://localhost:9091/verification
 NOMIS_MIGRATION_API_URL=http://localhost:9091/nomis-migration-api
+NOMIS_PRISONER_API_URL=http://localhost:9091/nomis-prisoner-api
 NODE_ENV=development
 API_CLIENT_ID=clientid
 API_CLIENT_SECRET=clientsecret
