sdi-125 migration history list

--- a/package.json
+++ b/package.json
@@ -100,12 +100,14 @@
     "express": "^4.17.3",
     "express-session": "^1.17.2",
     "govuk-frontend": "^4.0.1",
+    "govuk_frontend_toolkit": "^9.0.1",
     "helmet": "^5.0.2",
     "http-errors": "^2.0.0",
     "jquery": "^3.6.0",
     "jwt-decode": "^3.1.2",
     "nocache": "^3.0.1",
     "nunjucks": "^3.2.3",
+    "moment": "^2.29.1",
     "passport": "^0.5.2",
     "passport-oauth2": "^1.6.1",
     "redis": "^4.0.4",
