--- a/helm_deploy/hmpps-nomis-sync-dashboard/values.yaml
+++ b/helm_deploy/hmpps-nomis-sync-dashboard/values.yaml
@@ -28,6 +28,7 @@ generic-service:
     NODE_ENV: "production"
     REDIS_TLS_ENABLED: "true"
     TOKEN_VERIFICATION_ENABLED: "true"
+    APPLICATION_INSIGHTS_URL: "https://portal.azure.com#@747381f4-e81f-4a43-bf68-ced6a1e14edf/blade/Microsoft_Azure_Monitoring_Logs/LogsBlade"
 
   # Pre-existing kubernetes secrets to load as environment variables in the deployment.
   # namespace_secrets:
@@ -37,6 +38,7 @@ generic-service:
   namespace_secrets:
     hmpps-nomis-sync-dashboard:
       APPINSIGHTS_INSTRUMENTATIONKEY: "APPINSIGHTS_INSTRUMENTATIONKEY"
+      APPINSIGHTS_SUBSCRIPTION_ID: "APPINSIGHTS_SUBSCRIPTION_ID"
       API_CLIENT_ID: "API_CLIENT_ID"
       API_CLIENT_SECRET: "API_CLIENT_SECRET"
       SYSTEM_CLIENT_ID: "SYSTEM_CLIENT_ID"
