--- a/helm_deploy/values-prod.yaml
+++ b/helm_deploy/values-prod.yaml
@@ -13,6 +13,7 @@ generic-service:
     TOKEN_VERIFICATION_API_URL: "https://token-verification-api.prison.service.justice.gov.uk"
     NOMIS_MIGRATION_API_URL: "https://prisoner-nomis-migration.hmpps.service.justice.gov.uk"
     NOMIS_PRISONER_API_URL: "https://nomis-prisoner.aks-live-1.studio-hosting.service.justice.gov.uk"
+    APPINSIGHTS_COMPONENT: "nomisapi-prod"
 
 generic-prometheus-alerts:
   alertSeverity: digital-prison-service
