--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,11 +7,11 @@ orbs:
 parameters:
   alerts-slack-channel:
     type: string
-    default: hmpps_typescript_notifications
+    default: syscon-alerts
 
   releases-slack-channel:
     type: string
-    default: hmpps_typescript_notifications
+    default: dps-releases
 
   node-version:
     type: string
