sdi-233 update cloud platform alert route

--- a/helm_deploy/values-dev.yaml
+++ b/helm_deploy/values-dev.yaml
@@ -16,5 +16,5 @@ generic-service:
     APPINSIGHTS_COMPONENT: "nomisapi-t3"
 
 generic-prometheus-alerts:
-  alertSeverity: digital-prison-service-dev
+  alertSeverity: syscon
 
