--- a/package.json
+++ b/package.json
@@ -139,6 +139,7 @@
     "@types/validatorjs": "^3.15.0",
     "@typescript-eslint/eslint-plugin": "^5.28.0",
     "@typescript-eslint/parser": "^5.28.0",
+    "audit-ci": "^6.3.0",
     "concurrently": "^7.2.2",
     "cypress": "^10.1.0",
     "cypress-multi-reporters": "^1.6.1",
