--- a/helm_deploy/hmpps-nomis-sync-dashboard/values.yaml
+++ b/helm_deploy/hmpps-nomis-sync-dashboard/values.yaml
@@ -11,9 +11,10 @@ generic-service:
 
   ingress:
     enabled: true
+    v1_2_enabled: true
+    v0_47_enabled: true
     host: app-hostname.local    # override per environment
     tlsSecretName: nomis-sync-dashboard-cert
-    contextColour: green
 
   livenessProbe:
     httpGet:
