SDI-367: ⚡ Speed up test improvements copied from typescript template project

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "record-build-info": "node ./bin/record-build-info",
     "lint": "eslint . --cache --max-warnings 0",
     "typecheck": "tsc && tsc -p integration_tests",
-    "test": "TZ=Europe/London jest --maxWorkers=2",
+    "test": "TZ=Europe/London jest",
+    "test:ci": "TZ=Europe/London jest --runInBand",
     "security_audit": "npx audit-ci --config audit-ci.json",
     "int-test": "cypress run --config video=false",
     "int-test-ui": "cypress open",
@@ -33,6 +34,11 @@
   },
   "jest": {
     "preset": "ts-jest",
+    "globals": {
+      "ts-jest": {
+        "isolatedModules": true
+      }
+    },
     "collectCoverageFrom": [
       "server/**/*.{ts,js,jsx,mjs}"
     ],
@@ -86,7 +92,7 @@
   "dependencies": {
     "@ministryofjustice/frontend": "^1.4.2",
     "agentkeepalive": "^4.2.1",
-    "applicationinsights": "^2.3.3",
+    "applicationinsights": "^2.3.4",
     "body-parser": "^1.20.0",
     "bunyan": "^1.8.15",
     "bunyan-format": "^0.2.1",
@@ -95,22 +101,22 @@
     "connect-redis": "^6.1.3",
     "cookie-session": "^2.0.0",
     "csurf": "^1.11.0",
-    "dotenv": "^16.0.1",
+    "dotenv": "^16.0.2",
     "eslint-plugin-no-only-tests": "^2.6.0",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
     "govuk_frontend_toolkit": "^9.0.1",
-    "govuk-frontend": "^4.2.0",
-    "helmet": "^5.1.0",
+    "govuk-frontend": "^4.3.1",
+    "helmet": "^5.1.1",
     "http-errors": "^2.0.0",
-    "jquery": "^3.6.0",
+    "jquery": "^3.6.1",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
     "nocache": "^3.0.4",
     "nunjucks": "^3.2.3",
     "passport": "^0.6.0",
     "passport-oauth2": "^1.6.1",
-    "redis": "^4.2.0",
+    "redis": "^4.3.1",
     "superagent": "^7.1.6",
     "uuid": "^8.3.2",
     "validator": "^13.7.0",
@@ -118,7 +124,7 @@
   },
   "devDependencies": {
     "@types/bunyan": "^1.8.8",
-    "@types/bunyan-format": "^0.2.4",
+    "@types/bunyan-format": "^0.2.5",
     "@types/compression": "^1.7.2",
     "@types/connect-flash": "0.0.37",
     "@types/connect-redis": "^0.0.18",
@@ -127,23 +133,23 @@
     "@types/express-session": "^1.17.5",
     "@types/http-errors": "^1.8.2",
     "@types/jest": "^27.5.2",
-    "@types/jsonwebtoken": "^8.5.8",
-    "@types/node": "^18.0.3",
+    "@types/jsonwebtoken": "^8.5.9",
+    "@types/node": "^18.7.16",
     "@types/nunjucks": "^3.2.1",
-    "@types/passport": "^1.0.9",
+    "@types/passport": "^1.0.10",
     "@types/passport-oauth2": "^1.4.11",
     "@types/superagent": "^4.1.15",
     "@types/supertest": "^2.0.12",
     "@types/uuid": "^8.3.4",
-    "@types/validator": "^13.7.4",
+    "@types/validator": "^13.7.6",
     "@types/validatorjs": "^3.15.0",
-    "@typescript-eslint/eslint-plugin": "^5.30.5",
-    "@typescript-eslint/parser": "^5.30.5",
+    "@typescript-eslint/eslint-plugin": "^5.36.2",
+    "@typescript-eslint/parser": "^5.36.2",
     "audit-ci": "^6.3.0",
-    "concurrently": "^7.2.2",
-    "cypress": "^10.3.0",
+    "concurrently": "^7.4.0",
+    "cypress": "^10.7.0",
     "cypress-multi-reporters": "^1.6.1",
-    "eslint": "^8.19.0",
+    "eslint": "^8.23.1",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-import-resolver-typescript": "^2.7.1",
@@ -152,17 +158,17 @@
     "eslint-plugin-prettier": "^4.2.1",
     "husky": "^8.0.1",
     "jest": "^27.5.1",
-    "jest-html-reporter": "^3.5.0",
+    "jest-html-reporter": "^3.7.0",
     "jest-junit": "^13.2.0",
     "jsonwebtoken": "^8.5.1",
     "lint-staged": "^13.0.3",
     "mocha-junit-reporter": "^2.0.2",
-    "nock": "^13.2.8",
+    "nock": "^13.2.9",
     "nodemon": "^2.0.19",
     "prettier": "^2.7.1",
-    "sass": "^1.53.0",
+    "sass": "^1.54.9",
     "supertest": "^6.2.4",
     "ts-jest": "^27.1.5",
-    "typescript": "^4.7.4"
+    "typescript": "^4.8.3"
   }
 }
