--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
     "compile-sass": "sass --quiet-deps --no-source-map --load-path=node_modules/govuk-frontend --load-path=node_modules/@ministryofjustice/frontend --load-path=. ./assets/sass/application.sass:./assets/stylesheets/application.css ./assets/sass/application-ie8.sass:./assets/stylesheets/application-ie8.css --style compressed",
     "watch-ts": "tsc -w",
     "watch-views": "nodemon --watch server/views -e html,njk -x npm run copy-views",
-    "watch-node": "DEBUG=gov-starter-server* nodemon --watch dist/ dist/server.js | bunyan -o short",
+    "watch-node": "DEBUG=gov-starter-server* nodemon -r dotenv/config --watch dist/ dist/server.js | bunyan -o short",
     "watch-sass": "npm run compile-sass -- --watch",
     "build": "npm run compile-sass && tsc && npm run copy-views",
     "start": "node $NODE_OPTIONS dist/server.js | bunyan -o short",
     "start:dev": "npm run build && concurrently -k -p \"[{name}]\" -n \"Views,TypeScript,Node,Sass\" -c \"yellow.bold,cyan.bold,green.bold,blue.bold\" \"npm run watch-views\" \"npm run watch-ts\" \"npm run watch-node\" \"npm run watch-sass\"",
     "start-feature": "export $(cat feature.env) && node $NODE_DEBUG_OPTION dist/server.js | bunyan -o short",
-    "watch-node-feature": "export $(cat feature.env) && nodemon --watch dist/ $NODE_DEBUG_OPTION dist/server.js | bunyan -o short",
+    "watch-node-feature": "export $(cat feature.env) && nodemon -r dotenv/config --watch dist/ $NODE_DEBUG_OPTION dist/server.js | bunyan -o short",
     "start-feature:dev": "npm run build && concurrently -k -p \"[{name}]\" -n \"Views,TypeScript,Node,Sass\" -c \"yellow.bold,cyan.bold,green.bold,blue.bold\" \"npm run watch-views\" \"npm run watch-ts\" \"npm run watch-node-feature\" \"npm run watch-sass\"",
     "record-build-info": "node ./bin/record-build-info",
     "lint": "eslint . --cache --max-warnings 0",
@@ -34,10 +34,13 @@
   },
   "jest": {
     "preset": "ts-jest",
-    "globals": {
-      "ts-jest": {
-        "isolatedModules": true
-      }
+    "transform": {
+      "^.+\\.tsx?$": [
+        "ts-jest",
+        {
+          "isolatedModules": true
+        }
+      ]
     },
     "collectCoverageFrom": [
       "server/**/*.{ts,js,jsx,mjs}"
@@ -90,7 +93,7 @@
     ]
   },
   "dependencies": {
-    "@ministryofjustice/frontend": "^1.6.2",
+    "@ministryofjustice/frontend": "^1.6.3",
     "agentkeepalive": "^4.2.1",
     "applicationinsights": "^2.3.6",
     "body-parser": "^1.20.1",
@@ -99,15 +102,12 @@
     "compression": "^1.7.4",
     "connect-flash": "^0.1.1",
     "connect-redis": "^6.1.3",
-    "cookie-session": "^2.0.0",
     "csurf": "^1.11.0",
-    "dotenv": "^16.0.3",
-    "eslint-plugin-no-only-tests": "^2.6.0",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "govuk_frontend_toolkit": "^9.0.1",
-    "govuk-frontend": "^4.3.1",
-    "helmet": "^5.1.1",
+    "govuk-frontend": "^4.4.0",
+    "helmet": "^6.0.1",
     "http-errors": "^2.0.0",
     "jquery": "^3.6.1",
     "jwt-decode": "^3.1.2",
@@ -116,9 +116,9 @@
     "nunjucks": "^3.2.3",
     "passport": "^0.6.0",
     "passport-oauth2": "^1.6.1",
-    "redis": "^4.4.0",
-    "superagent": "^7.1.6",
-    "uuid": "^8.3.2",
+    "redis": "^4.5.1",
+    "superagent": "^8.0.5",
+    "uuid": "^9.0.0",
     "validator": "^13.7.0",
     "validatorjs": "^3.22.1"
   },
@@ -131,44 +131,47 @@
     "@types/cookie-session": "^2.0.44",
     "@types/csurf": "^1.11.2",
     "@types/express-session": "^1.17.5",
-    "@types/http-errors": "^1.8.2",
-    "@types/jest": "^27.5.2",
+    "@types/http-errors": "^2.0.1",
+    "@types/jest": "^29.2.4",
     "@types/jsonwebtoken": "^8.5.9",
-    "@types/node": "^18.11.9",
+    "@types/node": "^18.11.11",
     "@types/nunjucks": "^3.2.1",
     "@types/passport": "^1.0.11",
     "@types/passport-oauth2": "^1.4.11",
-    "@types/superagent": "^4.1.15",
+    "@types/superagent": "^4.1.16",
     "@types/supertest": "^2.0.12",
-    "@types/uuid": "^8.3.4",
+    "@types/uuid": "^9.0.0",
     "@types/validator": "^13.7.10",
     "@types/validatorjs": "^3.15.0",
-    "@typescript-eslint/eslint-plugin": "^5.42.0",
-    "@typescript-eslint/parser": "^5.42.0",
+    "@typescript-eslint/eslint-plugin": "^5.45.1",
+    "@typescript-eslint/parser": "^5.45.1",
     "audit-ci": "^6.3.0",
-    "concurrently": "^7.5.0",
-    "cypress": "^10.11.0",
+    "concurrently": "^7.6.0",
+    "cookie-session": "^2.0.0",
+    "cypress": "^12.0.1",
     "cypress-multi-reporters": "^1.6.1",
-    "eslint": "^8.27.0",
+    "dotenv": "^16.0.3",
+    "eslint": "^8.29.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-import-resolver-typescript": "^2.7.1",
+    "eslint-import-resolver-typescript": "^3.5.2",
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-no-only-tests": "^3.1.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "husky": "^8.0.1",
-    "jest": "^27.5.1",
+    "husky": "^8.0.2",
+    "jest": "^29.3.1",
     "jest-html-reporter": "^3.7.0",
-    "jest-junit": "^13.2.0",
+    "jest-junit": "^15.0.0",
     "jsonwebtoken": "^8.5.1",
-    "lint-staged": "^13.0.3",
-    "mocha-junit-reporter": "^2.1.1",
+    "lint-staged": "^13.1.0",
+    "mocha-junit-reporter": "^2.2.0",
     "nock": "^13.2.9",
     "nodemon": "^2.0.20",
-    "prettier": "^2.7.1",
-    "sass": "^1.56.0",
-    "supertest": "^6.3.1",
-    "ts-jest": "^27.1.5",
-    "typescript": "^4.8.4"
+    "prettier": "^2.8.0",
+    "sass": "^1.56.1",
+    "supertest": "^6.3.2",
+    "ts-jest": "^29.0.3",
+    "typescript": "^4.9.3"
   }
 }
