SDIT-776: 🔇 Alert in business hours only for dev and preprod

--- a/helm_deploy/values-preprod.yaml
+++ b/helm_deploy/values-preprod.yaml
@@ -17,5 +17,6 @@ generic-service:
     APPINSIGHTS_COMPONENT: "nomisapi-preprod"
 
 generic-prometheus-alerts:
+  businessHoursOnly: true
   alertSeverity: syscon
 
