--- a/helm_deploy/hmpps-nomis-sync-dashboard/values.yaml
+++ b/helm_deploy/hmpps-nomis-sync-dashboard/values.yaml
@@ -58,6 +58,8 @@ generic-service:
     cloudplatform-live1-1: "35.178.209.113/32"
     cloudplatform-live1-2: "3.8.51.207/32"
     cloudplatform-live1-3: "35.177.252.54/32"
+    moj-official-tgw-prod: "51.149.250.0/24"
+    moj-official-tgw-preprod: "51.149.251.0/24"
 
 generic-prometheus-alerts:
   targetApplication: hmpps-nomis-sync-dashboard
