SDIT-1223: 🔧 Add in product id configuration too

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,7 +37,7 @@ services:
     ports:
       - "3000:3000"
     environment:
-      - PRODUCT_ID=UNASSIGNED
+      - PRODUCT_ID=DPS060
       - REDIS_HOST=redis
       - HMPPS_AUTH_EXTERNAL_URL=http://localhost:9090/auth
       - HMPPS_AUTH_URL=http://hmpps-auth:8080/auth
