--- a/helm_deploy/values-dev.yaml
+++ b/helm_deploy/values-dev.yaml
@@ -15,6 +15,7 @@ generic-service:
     NOMIS_MIGRATION_API_URL: "https://prisoner-nomis-migration-dev.hmpps.service.justice.gov.uk"
     NOMIS_PRISONER_API_URL: "https://nomis-prisoner-api-dev.prison.service.justice.gov.uk"
     MAPPING_API_URL: "https://nomis-sync-prisoner-mapping-dev.hmpps.service.justice.gov.uk"
+    ACTIVITIES_API_URL: "https://activities-api-dev.prison.service.justice.gov.uk"
     APPINSIGHTS_COMPONENT: "nomisapi-t3"
     ENVIRONMENT_NAME: DEV
 
