--- a/helm_deploy/values-prod.yaml
+++ b/helm_deploy/values-prod.yaml
@@ -15,6 +15,7 @@ generic-service:
     NOMIS_MIGRATION_API_URL: "https://prisoner-nomis-migration.hmpps.service.justice.gov.uk"
     NOMIS_PRISONER_API_URL: "https://nomis-prisoner.aks-live-1.studio-hosting.service.justice.gov.uk"
     MAPPING_API_URL: "https://nomis-sync-prisoner-mapping.hmpps.service.justice.gov.uk"
+    ACTIVITIES_API_URL: "https://activities-api.prison.service.justice.gov.uk"
     APPINSIGHTS_COMPONENT: "nomisapi-prod"
 
 generic-prometheus-alerts:
