--- a/feature.env
+++ b/feature.env
@@ -6,6 +6,7 @@ TOKEN_VERIFICATION_ENABLED=true
 NOMIS_MIGRATION_API_URL=http://localhost:9091/nomis-migration-api
 NOMIS_PRISONER_API_URL=http://localhost:9091/nomis-prisoner-api
 MAPPING_API_URL=http://localhost:9091/mapping-api
+ACTIVITIES_API_URL=http://localhost:9091/activities-api
 NODE_ENV=development
 API_CLIENT_ID=clientid
 API_CLIENT_SECRET=clientsecret
