--- a/helm_deploy/values-preprod.yaml
+++ b/helm_deploy/values-preprod.yaml
@@ -13,7 +13,7 @@ generic-service:
     MANAGE_USERS_API_URL: "https://manage-users-api-preprod.hmpps.service.justice.gov.uk"
     TOKEN_VERIFICATION_API_URL: "https://token-verification-api-preprod.prison.service.justice.gov.uk"
     NOMIS_MIGRATION_API_URL: "https://prisoner-nomis-migration-preprod.hmpps.service.justice.gov.uk"
-    NOMIS_PRISONER_API_URL: "https://nomis-prsner-pp.aks-live-1.studio-hosting.service.justice.gov.uk"
+    NOMIS_PRISONER_API_URL: "https://nomis-prisoner-api-preprod.prison.service.justice.gov.uk"
     MAPPING_API_URL: "https://nomis-sync-prisoner-mapping-preprod.hmpps.service.justice.gov.uk"
     ACTIVITIES_API_URL: "https://activities-api-preprod.prison.service.justice.gov.uk"
     APPINSIGHTS_COMPONENT: "nomisapi-preprod"
