SDIT-1411: ⬆️ Tidy up after copying template files in

--- a/feature.env
+++ b/feature.env
@@ -7,6 +7,7 @@ NOMIS_MIGRATION_API_URL=http://localhost:9091/nomis-migration-api
 NOMIS_PRISONER_API_URL=http://localhost:9091/nomis-prisoner-api
 MAPPING_API_URL=http://localhost:9091/mapping-api
 ACTIVITIES_API_URL=http://localhost:9091/activities-api
+REDIS_ENABLED=false
 NODE_ENV=development
 API_CLIENT_ID=clientid
 API_CLIENT_SECRET=clientsecret
