--- a/helm_deploy/values-preprod.yaml
+++ b/helm_deploy/values-preprod.yaml
@@ -27,3 +27,6 @@ generic-prometheus-alerts:
   businessHoursOnly: true
   alertSeverity: syscon-nonprod
 
+  elastiCacheAlertsClusterIds:
+    cp-e9f6ec889153ff8c-001: "HMPPS NOMIS Sync Dashboard ElastiCache Cluster Node 1"
+    cp-e9f6ec889153ff8c-002: "HMPPS NOMIS Sync Dashboard ElastiCache Cluster Node 2"
