--- a/helm_deploy/values-prod.yaml
+++ b/helm_deploy/values-prod.yaml
@@ -20,3 +20,6 @@ generic-service:
 generic-prometheus-alerts:
   alertSeverity: syscon
 
+  elastiCacheAlertsClusterIds:
+    cp-7c68212ca2b8902c-001: "HMPPS NOMIS Sync Dashboard ElastiCache Cluster Node 1"
+    cp-7c68212ca2b8902c-002: "HMPPS NOMIS Sync Dashboard ElastiCache Cluster Node 2"
