--- a/helm_deploy/hmpps-nomis-sync-dashboard/values.yaml
+++ b/helm_deploy/hmpps-nomis-sync-dashboard/values.yaml
@@ -28,12 +28,12 @@ generic-service:
     REDIS_TLS_ENABLED: "true"
     TOKEN_VERIFICATION_ENABLED: "true"
     APPLICATION_INSIGHTS_URL: "https://portal.azure.com/#blade/Microsoft_Azure_Monitoring_Logs/LogsBlade"
-    APPLICATIONINSIGHTS_CONNECTION_STRING: "InstrumentationKey=$(APPINSIGHTS_INSTRUMENTATIONKEY);IngestionEndpoint=https://northeurope-0.in.applicationinsights.azure.com/;LiveEndpoint=https://northeurope.livediagnostics.monitor.azure.com/"
     PRODUCT_ID: "DPS060"
 
   namespace_secrets:
+    application-insights:
+      APPLICATIONINSIGHTS_CONNECTION_STRING: "APPLICATIONINSIGHTS_CONNECTION_STRING"
     hmpps-nomis-sync-dashboard:
-      APPINSIGHTS_INSTRUMENTATIONKEY: "APPINSIGHTS_INSTRUMENTATIONKEY"
       APPINSIGHTS_SUBSCRIPTION_ID: "APPINSIGHTS_SUBSCRIPTION_ID"
       AUTH_CODE_CLIENT_ID: "API_CLIENT_ID"
       AUTH_CODE_CLIENT_SECRET: "API_CLIENT_SECRET"
