--- a/package.json
+++ b/package.json
@@ -76,9 +76,9 @@
     ]
   },
   "dependencies": {
-    "@ministryofjustice/frontend": "^3.1.0",
-    "agentkeepalive": "^4.5.0",
-    "applicationinsights": "^2.9.6",
+    "@ministryofjustice/frontend": "^3.3.1",
+    "agentkeepalive": "^4.6.0",
+    "applicationinsights": "^3.4.0",
     "body-parser": "^1.20.3",
     "bunyan": "^1.8.15",
     "bunyan-format": "^0.2.1",
@@ -88,7 +88,7 @@
     "csurf": "^1.11.0",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
-    "govuk-frontend": "^5.7.1",
+    "govuk-frontend": "^5.8.0",
     "helmet": "^8.0.0",
     "http-errors": "^2.0.0",
     "jquery": "^3.7.1",
@@ -105,6 +105,7 @@
   },
   "devDependencies": {
     "@jgoz/esbuild-plugin-typecheck": "^4.0.2",
+    "@ministryofjustice/eslint-config-hmpps": "^0.0.1-beta.1",
     "@tsconfig/node22": "^22.0.0",
     "@types/bunyan": "^1.8.11",
     "@types/bunyan-format": "^0.2.9",
@@ -115,7 +116,7 @@
     "@types/http-errors": "^2.0.4",
     "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.7",
-    "@types/node": "^22.10.1",
+    "@types/node": "^22.10.7",
     "@types/nunjucks": "^3.2.6",
     "@types/passport": "^1.0.17",
     "@types/passport-oauth2": "^1.4.17",
@@ -123,40 +124,32 @@
     "@types/supertest": "^6.0.2",
     "@types/validator": "^13.12.2",
     "@types/validatorjs": "^3.15.5",
-    "@typescript-eslint/eslint-plugin": "^8.17.0",
-    "@typescript-eslint/parser": "^8.17.0",
+    "@typescript-eslint/eslint-plugin": "^8.20.0",
+    "@typescript-eslint/parser": "^8.20.0",
     "audit-ci": "^7.1.0",
     "chokidar": "^3.6.0",
-    "concurrently": "^9.1.0",
-    "cypress": "^13.16.1",
+    "concurrently": "^9.1.2",
+    "cypress": "^14.0.0",
     "cypress-multi-reporters": "^2.0.4",
-    "esbuild": "^0.23.1",
+    "esbuild": "^0.24.2",
     "esbuild-plugin-clean": "^1.0.1",
     "esbuild-plugin-copy": "^2.1.1",
     "esbuild-plugin-manifest": "^1.0.5",
     "esbuild-sass-plugin": "^3.3.1",
-    "eslint": "^8.57.1",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-import-resolver-typescript": "^3.7.0",
-    "eslint-plugin-cypress": "^3.6.0",
-    "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-no-only-tests": "^3.3.0",
-    "eslint-plugin-prettier": "^5.2.1",
-    "glob": "^11.0.0",
+    "glob": "^11.0.1",
     "husky": "^9.1.7",
     "jest": "^29.7.0",
     "jest-html-reporter": "^3.10.2",
     "jest-junit": "^16.0.0",
     "jsonwebtoken": "^9.0.2",
-    "lint-staged": "^15.2.10",
+    "lint-staged": "^15.4.1",
     "mocha-junit-reporter": "^2.2.1",
     "nock": "^13.5.6",
     "prettier": "^3.4.2",
     "prettier-plugin-jinja-template": "^2.0.0",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
-    "typescript": "^5.7.2"
+    "typescript": "^5.7.3"
   },
   "overrides": {
     "csurf": {
