--- a/helm_deploy/hmpps-nomis-sync-dashboard/values.yaml
+++ b/helm_deploy/hmpps-nomis-sync-dashboard/values.yaml
@@ -27,7 +27,7 @@ generic-service:
     REDIS_ENABLED: "true"
     REDIS_TLS_ENABLED: "true"
     TOKEN_VERIFICATION_ENABLED: "true"
-    APPLICATION_INSIGHTS_URL: "https://portal.azure.com/#blade/Microsoft_Azure_Monitoring_Logs/LogsBlade"
+    APPLICATION_INSIGHTS_URL: "https://portal.azure.com"
     PRODUCT_ID: "DPS060"
 
   namespace_secrets:
