--- a/.github/workflows/security_codeql_actions_scan.yml
+++ b/.github/workflows/security_codeql_actions_scan.yml
@@ -1,16 +1,16 @@
-name: Security npm dependency check
+name: Security CodeQL actions scan
 on:
   workflow_dispatch:
   schedule:
     - cron: "2 5 * * MON-FRI" # Every weekday at 05:02 UTC
 jobs:
-  security-npm-dependency-check:
+  security-codeql-actions-check:
     permissions:
       contents: read
       actions: read
       security-events: write
-    name: Project security npm dependency check
-    uses: ministryofjustice/hmpps-github-actions/.github/workflows/security_npm_dependency.yml@v2 # WORKFLOW_VERSION
+    name: Project security CodeQL actions scan
+    uses: ministryofjustice/hmpps-github-actions/.github/workflows/security_codeql_actions.yml@v2 # WORKFLOW_VERSION
     with:
       channel_id: ${{ vars.SECURITY_ALERTS_SLACK_CHANNEL_ID || 'NO_SLACK' }}
     secrets: inherit
