--- a/.github/workflows/security_trivy.yml
+++ b/.github/workflows/security_trivy.yml
@@ -2,9 +2,13 @@ name: Security trivy dependency check
 on:
   workflow_dispatch:
   schedule:
-    - cron: "53 4 * * MON-FRI" # Every weekday at 04:53 UTC
+    - cron: "2 5 * * MON-FRI" # Every weekday at 05:02 UTC
 jobs:
-  security-kotlin-trivy-check:
+  security-trivy-check:
+    permissions:
+      contents: read
+      actions: read
+      security-events: write
     name: Project security trivy dependency check
     uses: ministryofjustice/hmpps-github-actions/.github/workflows/security_trivy.yml@v2 # WORKFLOW_VERSION
     with:
