--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "repository": "git@github.com:ministryofjustice/hmpps-nomis-sync-dashboard.git",
   "license": "MIT",
   "scripts": {
-    "prepare": "husky",
+    "prepare": "hmpps-precommit-hooks-prepare",
     "watch-ts": "tsc -w",
     "build": "node esbuild/esbuild.config.js --build",
     "start": "node $NODE_OPTIONS dist/server.js | bunyan -o short",
@@ -21,7 +21,10 @@
     "int-test": "cypress run --config video=false",
     "int-test-ui": "cypress open --e2e --browser chrome",
     "clean": "rm -rf dist node_modules",
-    "rebuild": "npm run clean && npm i && npm run build"
+    "rebuild": "npm run clean && npm i && npm run build",
+    "precommit:secrets": "gitleaks git --pre-commit --redact --staged --verbose --config .gitleaks/config.toml",
+    "precommit:lint": "node_modules/.bin/lint-staged",
+    "precommit:verify": "npm run typecheck && npm test"
   },
   "engines": {
     "node": "^22",
@@ -76,18 +79,18 @@
     "@ministryofjustice/frontend": "5.1",
     "@ministryofjustice/hmpps-auth-clients": "^0.0.1-alpha.4",
     "@ministryofjustice/hmpps-monitoring": "^0.0.1-beta.2",
-    "@ministryofjustice/hmpps-rest-client": "^0.0.1-alpha.9",
+    "@ministryofjustice/hmpps-rest-client": "^0.0.1-alpha.11",
     "applicationinsights": "^2.9.6",
     "body-parser": "^2.2.0",
     "bunyan": "^1.8.15",
     "bunyan-format": "^0.2.1",
     "compression": "^1.8.0",
     "connect-flash": "^0.1.1",
-    "connect-redis": "^8.0.3",
-    "csrf-sync": "^4.1.0",
+    "connect-redis": "^8.1.0",
+    "csrf-sync": "^4.2.1",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
-    "govuk-frontend": "^5.9.0",
+    "govuk-frontend": "^5.10.2",
     "helmet": "^8.1.0",
     "http-errors": "^2.0.0",
     "jquery": "^3.7.1",
@@ -98,20 +101,21 @@
     "passport": "^0.7.0",
     "passport-oauth2": "^1.8.0",
     "redis": "^4.7.0",
-    "superagent": "^10.2.0",
-    "validator": "^13.15.0",
+    "superagent": "^10.2.1",
+    "validator": "^13.15.15",
     "validatorjs": "^3.22.1"
   },
   "devDependencies": {
     "@jgoz/esbuild-plugin-typecheck": "^4.0.3",
     "@ministryofjustice/eslint-config-hmpps": "^0.0.1-beta.2",
-    "@tsconfig/node22": "^22.0.1",
+    "@ministryofjustice/hmpps-precommit-hooks": "^0.0.3",
+    "@tsconfig/node22": "^22.0.2",
     "@types/bunyan": "^1.8.11",
     "@types/bunyan-format": "^0.2.9",
-    "@types/compression": "^1.7.5",
+    "@types/compression": "^1.8.1",
     "@types/connect-flash": "0.0.40",
-    "@types/express-session": "^1.18.1",
-    "@types/http-errors": "^2.0.4",
+    "@types/express-session": "^1.18.2",
+    "@types/http-errors": "^2.0.5",
     "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.15.3",
@@ -120,12 +124,12 @@
     "@types/passport-oauth2": "^1.4.17",
     "@types/superagent": "^8.1.9",
     "@types/supertest": "^6.0.3",
-    "@types/validator": "^13.15.0",
+    "@types/validator": "^13.15.1",
     "@types/validatorjs": "^3.15.5",
     "audit-ci": "^7.1.0",
     "chokidar": "^3.6.0",
     "concurrently": "^9.1.2",
-    "cypress": "^14.3.2",
+    "cypress": "^14.4.1",
     "cypress-multi-reporters": "^2.0.5",
     "esbuild": "^0.25.2",
     "esbuild-plugin-clean": "^1.0.1",
@@ -133,18 +137,17 @@
     "esbuild-plugin-manifest": "^1.0.5",
     "esbuild-sass-plugin": "^3.3.1",
     "glob": "^11.0.2",
-    "husky": "^9.1.7",
     "jest": "^29.7.0",
     "jest-html-reporter": "^4.1.0",
     "jest-junit": "^16.0.0",
     "jsonwebtoken": "^9.0.2",
-    "lint-staged": "^15.5.1",
+    "lint-staged": "^16.1.0",
     "mocha-junit-reporter": "^2.2.1",
-    "nock": "^14.0.4",
+    "nock": "^14.0.5",
     "prettier": "^3.5.3",
     "prettier-plugin-jinja-template": "^2.1.0",
-    "supertest": "^7.1.0",
-    "ts-jest": "^29.3.2",
+    "supertest": "^7.1.1",
+    "ts-jest": "^29.4.0",
     "typescript": "^5.8.3"
   },
   "overrides": {
