--- a/.gitleaks/.gitleaksignore
+++ b/.gitleaks/.gitleaksignore
@@ -1,1 +1,2 @@
 # The Fingerprint of false positive alerts can be added here to be excluded from future scans.
+integration_tests/e2e/movementsMigrationStart.cy.ts:token:15
