--- a/.gitleaksignore
+++ b/.gitleaksignore
@@ -1,2 +1,3 @@
+# TODO - copied this to the root of the directory until we have a mechanism to add `--gitleaks-ignore-path .gitleaks/.gitleaksignore`
 # The Fingerprint of false positive alerts can be added here to be excluded from future scans.
 integration_tests/e2e/movementsMigrationStart.cy.ts:token:15
