--- a/.gitleaks/.gitleaksignore
+++ b/.gitleaks/.gitleaksignore
@@ -1,2 +1,6 @@
 # The Fingerprint of false positive alerts can be added here to be excluded from future scans.
 integration_tests/e2e/movementsMigrationStart.cy.ts:token:15
+integration_tests/e2e/prisonerbalance/prisonerBalanceMigrationDetails.cy.ts:token:10
+integration_tests/e2e/prisonerbalance/prisonerBalanceMigrationDetails.cy.ts:token:31
+integration_tests/e2e/prisonerbalance/prisonerBalanceMigration.cy.ts:token:14
+integration_tests/e2e/prisonerbalance/prisonerBalanceMigrationStart.cy.ts:token:15
